# geekbang-pdf

./: .gitignore  CLAUDE.md  README.md  install.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md
.claude/rules/: code-style.md  security.md  testing.md
.claude/skills/fix-issue/: CHANGELOG.md  EXAMPLES.md  REFERENCE.md  SKILL.md
.claude/skills/fix-issue/resources/: ac-templates.md  anti-patterns.md  claude-md-guide.md  hooks-templates.md  schema.json
.claude/skills/fix-issue/scripts/: __init__.py  helper.py  validator.py
.claude/skills/fix-issue/templates/: report.md
.github/workflows/: claude.yml
config/: __init__.py  config.py  selectors.json
docs/: TECHNICAL_DESIGN.md  prd-geekbang-pdf-saver.md
scripts/: expand_content.js  find_content.js  hide_sidebar.js  remove_floating_layers.js  scroll_content.js
src/: __init__.py  auth.py  converter.py  exceptions.py
src/cli/: __init__.py  commands.py  formatters.py
src/core/: __init__.py  auth.py  converter.py  exceptions.py  fetcher.py  parser.py
src/models/: __init__.py  config.py  pdf_options.py
src/utils/: __init__.py  constants.py  javascript.py  logging_config.py  selectors.py  waits.py
tasks/: tasks-documentation-improvement.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py
