[project]
name = "geekbang-pdf"
version = "1.0.0"
description = "Save geekbang.org course pages as PDF files"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
geekbang-pdf = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "config", "src.utils"]
